[package]
name = "mhd_am"
version = "0.0.1"
authors = ["Ronald Moore <ronald.moore@h-da.de>"]

license = "MIT/Apache-2.0"
keywords = ["masked hamming distance", "associative memory", "content addressable memory", "hamming", "bithack"]
homepage = "https://github.com/ProfRon/masked-hamming-memory"
repository = "https://github.com/ProfRon/masked-hamming-memory"
documentation = "https://github.com/ProfRon/masked-hamming-memory"

description = """
A rust crate to implement Bernd Klauer's MHD (Masked Hamming Distance) Associative Memory 
(more or less) in Rust -- building on Huonw's excellent "hamming" crate.
"""


[features]
unstable = []

[dev-dependencies]
quickcheck = "0.2"
rand = "0.3"
criterion = "0.2"

[[bench]]
name = "benches"
harness = false
