[package]
name = "mhd_mem"
version = "0.0.1"
authors = ["Ronald Moore <ronald.moore@h-da.de>"]

license = "MIT/Apache-2.0"
keywords = ["masked hamming distance", "associative memory", "content addressable memory", "hamming", "bithack"]
homepage = "https://github.com/ProfRon/masked-hamming-memory"
repository = "https://github.com/ProfRon/masked-hamming-memory"
documentation = "https://github.com/ProfRon/masked-hamming-memory"

description = """
A rust crate to implement Bernd Klauer's MHD (Masked Hamming Distance) Associative Memory 
(more or less) in Rust -- building on Huonw's excellent "hamming" crate.
"""

autoexamples = false

[features]
unstable = []

[dependencies]
hamming = "0.1"
rand = "0.8"
rand_distr = "0.4"
log  = "0.4"
serde = "1.0"
docopt = "1.1"

[dev-dependencies]
quickcheck = "0.2"
criterion = "0.3"

[[example]]
name = "knapsacks"

[[bench]]
name = "benches"
harness = false

